--- a/css/style.css
+++ b/css/style.css
@@ -658,6 +658,7 @@ caption {
 }
 
 .bbsList li {
+  position: relative;
   padding: 16px 0;
   border-bottom: 1px solid #E8E8E8;
   font-size: 14px;
@@ -683,6 +684,30 @@ caption {
   font-size: 4.4444444444vw;
   color: #0D0D0D;
   text-align: center;
+}
+.bbsList.has-download li {
+  padding-right: 11.1111111111vw;
+}
+.bbsList.has-download li .btn-download {
+  display: inline-block;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 8.3333333333vw;
+  height: 8.3333333333vw;
+}
+.bbsList.has-download li .btn-download::before {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
+  width: 5vw;
+  height: 5vw;
+  margin: 0;
+}
+.bbsList.has-download li.no-data {
+  padding-right: 0;
 }
 
 .bbsTbl th {
@@ -713,6 +738,16 @@ caption {
 .bbsTbl td a:hover {
   font-weight: 500;
   color: #00498C;
+}
+.bbsTbl td a.btn-download {
+  display: inline-block;
+  font-size: 16px;
+}
+.bbsTbl td a.btn-download::before {
+  vertical-align: text-bottom;
+}
+.bbsTbl td a.btn-download:hover {
+  color: #08A2DC;
 }
 .bbsTbl tr.no-data td {
   height: auto;
@@ -876,8 +911,7 @@ caption {
   border-top: 1px solid #0D0D0D;
 }
 .bbs_detail .top {
-  display: flex;
-  justify-content: space-between;
+  position: relative;
   margin-top: 2.2222222222vw;
 }
 .bbs_detail .top span, .bbs_detail .top em {
@@ -892,8 +926,18 @@ caption {
   margin-left: 5px;
   font-weight: 500;
 }
+.bbs_detail .top .cate, .bbs_detail .top .info {
+  position: absolute;
+  top: 0;
+}
+.bbs_detail .top .cate {
+  left: 0;
+}
+.bbs_detail .top .info {
+  right: 0;
+}
 .bbs_detail .bbs-view-content {
-  padding: 9.7222222222vw 0 11.1111111111vw;
+  padding: 9.7222222222vw 0 0;
   line-height: 1.5;
   font-weight: 400;
   color: #454545;
@@ -904,8 +948,17 @@ caption {
   height: auto;
   text-align: center;
 }
+.bbs_detail .download-area {
+  margin-top: 6.6666666667vw;
+  padding: 4.4444444444vw 5.5555555556vw;
+  background: #EFF6FC;
+}
+.bbs_detail .download-area .btn-download {
+  font-size: 3.8888888889vw;
+}
 
 .bbs-more {
+  margin-top: 11.1111111111vw;
   border-top: 1px solid #0D0D0D;
   border-bottom: 1px solid #0D0D0D;
 }
@@ -980,12 +1033,29 @@ caption {
     font-size: 16px;
   }
   .bbs_detail .bbs-view-content {
-    padding: 60px 0 60px;
+    padding: 60px 0 0;
     font-size: 18px;
   }
   .bbs_detail .bbs-view-content img {
     width: auto;
     height: auto;
+  }
+  .bbs_detail .download-area {
+    margin-top: 60px;
+    padding: 30px 40px;
+  }
+  .bbs_detail .download-area .btn-download {
+    font-size: 16px;
+  }
+  .bbs_detail .download-area .btn-download:hover {
+    color: #08A2DC;
+  }
+  .bbs_detail .download-area .label {
+    color: #777777;
+    margin-right: 10px;
+  }
+  .bbs-more {
+    margin-top: 60px;
   }
   .bbs-more li {
     display: flex;
@@ -1006,6 +1076,10 @@ caption {
   }
   .bbs-more li a {
     font-size: 18px;
+  }
+  .bbs-more li a:hover {
+    font-weight: 500;
+    color: #00498C;
   }
   .bbs-more li::after {
     width: 16px;
@@ -1077,7 +1151,7 @@ caption {
   margin-right: 2.2222222222vw;
   background: url("/images/ico_download.png") no-repeat 50% 50%;
   background-size: cover;
-  vertical-align: bottom;
+  vertical-align: text-bottom;
 }
 
 @media all and (min-width: 961px) {
@@ -2319,24 +2393,20 @@ caption {
   color: #777777;
 }
 .esg-level-wrap .esg-mark-wrap .esg-mark {
-  width: 25.5555555556vw;
+  width: 21.6666666667vw;
 }
 .esg-level-wrap .esg-mark-wrap .esg-mark span {
   display: block;
   margin-top: 1.1111111111vw;
   font-weight: 700;
-  font-size: 4.1666666667vw;
+  font-size: 3.8888888889vw;
 }
 .esg-level-wrap .esg-mark-wrap .esg-mark img {
   width: 100%;
   height: auto;
-}
-.esg-level-wrap .esg-mark-wrap .esg-mark.total {
-  width: 38.8888888889vw;
-  margin: 7.7777777778vw auto 0;
+  padding: 0 1.3888888889vw;
 }
 .esg-level-wrap .esg-mark-wrap .esg-mark.total span {
-  margin-top: 1.6666666667vw;
   color: #002856;
 }
 .esg-level-wrap .esg-mark-wrap .esg-mark.env span {
@@ -2360,13 +2430,13 @@ caption {
   }
   .esg-level-wrap .esg-mark-wrap {
     width: 50%;
-    padding-right: 85px;
+    padding-right: 65px;
   }
   .esg-level-wrap .esg-mark-wrap + .esg-mark-wrap {
     margin-top: 0;
     padding-top: 0;
     padding-right: 0;
-    padding-left: 85px;
+    padding-left: 65px;
     border-top: none;
     border-left: 1px solid #E8E8E8;
   }
@@ -2375,19 +2445,15 @@ caption {
     font-size: 14px;
   }
   .esg-level-wrap .esg-mark-wrap .esg-mark {
-    width: 133px;
+    width: 114px;
   }
   .esg-level-wrap .esg-mark-wrap .esg-mark span {
     display: block;
     margin-top: 7px;
     font-size: 17px;
   }
-  .esg-level-wrap .esg-mark-wrap .esg-mark.total {
-    width: 163px;
-    margin-top: 40px;
-  }
-  .esg-level-wrap .esg-mark-wrap .esg-mark.total span {
-    margin-top: 9px;
+  .esg-level-wrap .esg-mark-wrap .esg-mark img {
+    padding: 0;
   }
   .esg-level-wrap .esg-mark-wrap .esg-mark-list {
     display: flex;
@@ -2404,6 +2470,12 @@ caption {
   }
   .esg-level-wrap .esg-mark-wrap + .esg-mark-wrap {
     padding-left: 2%;
+  }
+  .esg-level-wrap .esg-mark-wrap .esg-mark {
+    width: 78px;
+  }
+  .esg-level-wrap .esg-mark-wrap .esg-mark span {
+    font-size: 14px;
   }
 }
 .tbl-scrollable {
