--- a/css/style.css
+++ b/css/style.css
@@ -2773,7 +2773,7 @@ caption {
 }
 .history-cont.fix .history-tab {
   position: fixed;
-  top: 17.7777777778vw;
+  top: 15.5555555556vw;
   width: 100%;
   z-index: 8;
   background-color: #fff;
@@ -3029,7 +3029,7 @@ caption {
   }
   .history-cont .history-tab .select-tab.fix {
     position: fixed;
-    top: 80px;
+    top: 178px;
   }
   .history-cont .history-tab .select-tab li + li {
     margin-top: 20px;
@@ -3158,7 +3158,7 @@ header {
   align-items: center;
   justify-content: space-between;
   width: 100vw;
-  height: 17.7777777778vw;
+  height: 15.5555555556vw;
   padding: 0 24px 0 20px;
   box-sizing: border-box;
   background-color: #fff;
@@ -3333,7 +3333,6 @@ header.expand nav > ul > li.active > ul > li > ul > li.active a {
     height: 92px;
     padding: 0 60px;
     box-shadow: 0px 0px 14px rgba(0, 0, 0, 0.12);
-    transition: all 0.6s ease;
   }
   header.top, header.up {
     box-shadow: none;
@@ -3354,7 +3353,7 @@ header.expand nav > ul > li.active > ul > li > ul > li.active a {
     height: 32px;
   }
   header .head .quick-menu {
-    display: none;
+    display: block;
     width: calc(100% - 200px - 80px);
     max-width: 600px;
   }
@@ -3521,6 +3520,9 @@ header.expand nav > ul > li.active > ul > li > ul > li.active a {
   header.show-menu nav > ul > li > ul > li > ul > li:first-child.active a::before, header.show-menu nav > ul > li > ul > li > ul > li:first-child:hover a::before {
     background: #FFFFFF;
   }
+  header.show-menu nav > ul > li > ul > li > ul > li:first-child {
+    margin-bottom: 15px;
+  }
   header.show-menu nav > ul > li > ul > li > ul > li:first-child a {
     font-size: 17px;
     font-weight: 700;
@@ -3528,7 +3530,7 @@ header.expand nav > ul > li.active > ul > li > ul > li.active a {
   }
   header.show-menu nav > ul > li > ul > li > ul > li a {
     font-size: 16px;
-    font-weight: 500;
+    font-weight: 400;
     color: #fff;
     opacity: 0.7;
   }
@@ -3612,7 +3614,7 @@ header.expand nav > ul > li.active > ul > li > ul > li.active a {
   }
   header.expand nav a {
     font-size: 16px;
-    font-weight: 500;
+    font-weight: 400;
   }
   header.expand nav > ul {
     display: flex;
@@ -3697,6 +3699,9 @@ header.expand nav > ul > li.active > ul > li > ul > li.active a {
   }
   header.expand nav > ul > li > ul > li > ul > li.active a {
     color: #08A2DC !important;
+  }
+  header.expand nav > ul > li > ul > li > ul > li:first-child {
+    margin-bottom: 15px;
   }
   header.expand nav > ul > li > ul > li > ul > li:first-child a {
     font-size: 17px;
