--- a/css/main.scss
+++ b/css/main.scss
@@ -894,6 +894,25 @@ main {
     }
   }
   .news-room {
+    .news-top {
+      padding:get-vw(80px) 0 get-vw(40px) get-vw(24px);
+      background: url("../images/bg_ak_main_mo.png") no-repeat 50% 50%;
+      background-size: cover;
+      h2 {
+        font-weight: 700;
+        font-size: get-vw(45px);
+        line-height: 1;
+        text-align: left;
+        color: #00498C;
+      }
+      p {
+        margin-top:get-vw(15px);
+        font-size: get-vw(19px);
+        line-height: get-vw(29px);
+        letter-spacing: -0.03em;
+        color: #0D0D0D;
+      }
+    }
   }
   .esg {
   }
